<resources>
    <string name="app_name">TransactionActivity</string>
    <string name="floatbutton">floatbutton</string>
    <string name="action_archive">Archive</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="Simpan">Simpan</string>
    <string name="Hapus">Hapus</string>
    <string name="input_item">Input item</string>
    <string name="merk">Merk</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="varian">varian</string>
    <string name="harga_modal">Harga Modal</string>
    <string name="harga_jual">Harga Jual</string>
    <string name="stok">Stok</string>
    <string name="submit">Submit</string>
    <string name="satuan">Satuan</string>
    <string name="perbox">Perbox</string>
    <string name="unit">Unit</string>

</resources>