<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InputItem">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="673dp"
        android:background="@drawable/notadigital"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/input_item"
                android:textColor="@color/primary_light"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.424"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/merk"
                android:layout_width="360dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/input"
                android:hint="@string/merk"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/namaBrg"
                android:layout_width="360dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/input"
                android:hint="@string/nama_barang"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/merk" />

            <EditText
                android:id="@+id/varian"
                android:layout_width="360dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/input"
                android:hint="@string/varian"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/namaBrg" />

            <EditText
                android:id="@+id/hrgmodal"
                android:layout_width="360dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/input"
                android:hint="@string/harga_modal"
                android:inputType="number"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <EditText
                android:id="@+id/hrgjual"
                android:layout_width="360dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/input"
                android:hint="@string/harga_jual"
                android:inputType="number"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hrgmodal" />

            <EditText
                android:id="@+id/stok"
                android:layout_width="360dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/input"
                android:hint="@string/stok"
                android:inputType="number"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hrgjual" />


            <Button
                android:id="@+id/registerBtn"
                android:layout_width="360dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="596dp"
                android:backgroundTint="@color/teal_200"
                android:text="@string/submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/unit"
                app:layout_constraintTop_toBottomOf="@+id/varian">

                <RadioButton
                    android:id="@+id/satuanButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorWhite"
                    android:checked="false"
                    android:padding="10dp"
                    android:text="@string/satuan" />

                <RadioButton
                    android:id="@+id/perboxButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorWhite"
                    android:checked="false"
                    android:padding="10dp"
                    android:text="@string/perbox"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/satuanButton"
                    app:layout_constraintTop_toBottomOf="@+id/varian" />
            </RadioGroup>

            <TextView
                android:id="@+id/unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="17dp"
                android:background="@color/colorWhite"
                android:padding="10dp"
                android:text="@string/unit"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/hrgmodal"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/purple_500"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_navigation"
        tools:layout_editor_absoluteX="0dp" />

</RelativeLayout>